--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
   'tqdm',
   'more-itertools',
   'tiktoken == 0.3.3',
-  'whisper-at == 0.4.0',
+  'whisper-at == 0.4.0; sys_platform == "Linux"',
 ]
 
 [tool.pyright]
