added pandas dependency and updated author information

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "ub_nssd"
 version = "0.1.0"
 description = "Non-Sound Speech Detection (NSSD) Team for UB Voice."
-authors = [{ name = "ok-nick, korliu", email = "nick.libraries@gmail.com, koreyliu1221@gmail.com" }]
+authors = [{name = "ok-nick", email = "nick.libraries@gmail.com"}, {name="korliu", email="koreyliu1221@gmail.com"}]
 dependencies = [
   'numba',
   'numpy',
@@ -10,6 +10,7 @@ dependencies = [
   'tqdm',
   'more-itertools',
   'tiktoken == 0.3.3',
+  'pandas',
   'whisper-at == 0.4.0; sys_platform == "Linux"',
 ]
 
