--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   'tiktoken == 0.3.3',
   'pandas',
   'whisper-at == 0.4.0; sys_platform == "Linux"',
+  'matplotlib'
 ]
 
 [tool.pyright]
