--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   'pytube',
   'whisper-at == 0.4.0; sys_platform == "Linux"',
   'matplotlib',
+  'requests'
 ]
 
 [tool.pyright]
