does not ignore manually_annotated.json

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ datasets/*
 !datasets/README.md
 !datasets/google_audioset/
 datasets/google_audioset/audioset
+!datasets/manually_annotated.json
 meeting_notes/*
