progress training yamnet

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 __pycache__/
+build
+src/ub_nssd.egg-info
 .venv/
 
 datasets/*
@@ -7,4 +9,5 @@ datasets/*
 datasets/google_audioset/audioset
 !datasets/manually_annotated.json
 !datasets/manual_data.csv
+
 meeting_notes/*
