--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ datasets/*
 datasets/google_audioset/audioset
 !datasets/manually_annotated.json
 !datasets/manual_data.csv
+!datasets/all_data.csv
 !datasets/foods_data.csv
 # TODO: temporary
 !datasets/to16bit.py 
