--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ datasets/google_audioset/audioset
 !datasets/foods_data.csv
 # TODO: temporary
 !datasets/to16bit.py 
+!datasets/get_eating_sound_data.py
+!datasets/get_food_intake_dataset.py
 
 meeting_notes/*
 
